--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             font-family: "Dancing Script", cursive;
             text-align: center;
             color: #ffffff;
-            overflow: hidden;
+            overflow-y: scroll;
+            overflow-x: hidden;
         }
 
     
@@ -126,3 +127,4 @@
 
 </body>
 </html>
+
